--- a/css/main.css
+++ b/css/main.css
@@ -530,7 +530,7 @@ body {
   right: 0;
   width: 100%;
   max-width: 454px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.937254902);
   padding: 25px 10px;
 }
 
@@ -543,7 +543,7 @@ body {
   right: 0;
   width: 100%;
   max-width: 454px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.937254902);
   padding: 25px 10px;
 }
 
