--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -102,7 +102,7 @@
     right: 0;
     width: 100%;
     max-width: 454px;
-    background-color: #ffff;
+    background-color: #ffffffef;
     padding: 25px 10px;
 }
 .contact{
@@ -114,7 +114,7 @@
     right: 0;
     width: 100%;
     max-width: 454px;
-    background-color: #ffff;
+    background-color: #ffffffef;
     padding: 25px 10px;
 }
 .modal__logo {
